@@ -163,6 +163,7 @@
     "never": "Never",
     "coupon_available": "You have a coupon available!",
     "info": "Info",
+    "launch_random": "Launch Random Game",
     "drops_value": "Highest Drop Value",
     "notcommon_label": "Hide games that you own",
     "show_all_steam_releases": "Show all Steam releases",
